--- a/styles/UserPage.module.css
+++ b/styles/UserPage.module.css
@@ -1,11 +1,10 @@
 .main {
-  padding: 5rem 30px 1rem 30px; /* top right bottom left */
+  padding: 5rem 30px 0px 30px; /* top right bottom left */
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
   
-  min-height: 760px;
   position: relative;
   color: #b4a5a5;
 }
